--- a/options.css
+++ b/options.css
@@ -1,13 +1,67 @@
+body {
+	width: 340px;
+	margin: 20px auto;
+	font-size: 14px;
+	/*border: 1px solid red;*/
+}
+h2 {
+	text-align: center;
+}
+ul {
+	width: 90%;
+	padding: 0;
+	margin: 0 auto;
+	list-style: none;
+	/*vertical-align: center;*/
+	/*border: 1px solid red;*/
+}
+ul li {
+	width: 100%;
+	margin: 0 auto;
+
+}
+
+form {
+	width: 90%;
+	margin: 0 auto;
+	padding: 0;
+}
+
+form input {
+	height: 16px;
+	display: inline-block;
+	width: 69%;
+	margin: 0 auto;
+	padding: 0;
+	text-align: center;
+}
+
 button {
 	padding: 5px;
 	margin: 5px;
 	border: none;
 	background-color: red;
 	color: white;
-	text-shadow: none;
-	background-image: none;
 	cursor: pointer;
+	display: inline-block;
+	font-size: 12px;
 }
+
 button#add-btn {
+	display: inline-block;
 	background-color: green;
+	margin: 5px auto;
+
+}
+
+span {
+	display: inline-block;
+	width: 70%;
+	text-align: center;
+}
+
+hr {
+	border: 0;
+	border-bottom: 1px solid #ccc;
+	/*box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);*/
 }
